--- a/templates/health.html
+++ b/templates/health.html
@@ -8,7 +8,7 @@
     {% extends "template.html" %}
     {% block content %}
     
-    <h1> The health of my app </h1>
+    <h1> Health checks should hit the database and return json similar to below, maybe with more information</h1>
     <p> {"status" : "up"} </p>
     
     {% endblock %}
